k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zen-messaging-gateway
  labels:
    app: zen-messaging-gateway
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: zen-messaging-gateway
